--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Gibraltar.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keyword" content="Apex, Apex Legends, エーペックスレジェンズ, 掲示板" />
+    <meta name="description" content="Apex Legends（エーペックスレジェンズ）の掲示板です。フレンド募集や雑談などご自由にお使いください。" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,6 +15,14 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Apex Legends エーペックスレジェンズ掲示板【PS4/PS5 PC Xbox】</title>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@metalic_kudo_h" /> 
+    <meta property="og:url" content="https://gamer-lab.net/" /> 
+    <meta property="og:title" content="Apex Legends掲示板" /> 
+    <meta property="og:description" content="Apex Legends（エーペックスレジェンズ）の掲示板です。フレンド募集や雑談などご自由にお使いください。" /> 
+<meta property="og:image" content="https://gamer-lab.net/twitter_card_image.png" /> 
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
